--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     </head>
         <body>
 
-          <h1 class='heading-background'>Olivia Miles</h1>
+          <h1 style="text-align: center;">Olivia Miles</h1>
          <nav>
             <ul>
               <li><a href="#home">Home</a></li>
@@ -24,9 +24,7 @@
 
                  ​Additional skills I have are adaptability, active-listening, time management, and creativity.</p>
 
-
-
-                 <h2 class='destination heading-background'>1. Florence, Italy</h2>
-                 
+                 <h2>Gallery</h2>
+                 <img src="https://mail.google.com/mail/u/0?ui=2&ik=21883c881f&attid=0.2&permmsgid=msg-f:1738298390670987387&th=181fad2d2993d07b&view=fimg&fur=ip&sz=s0-l75-ft&attbid=ANGjdJ9Xdyvd-Me21Io30RrOASnqR_ReJmazcmsBbVt11VLBzUUX0R0LKeftQY96D0xpIAfk1ox2i0NkfbAJ60VjIDniERq0POqYBFCvMwdsx8t-hHVx9VMB6ZZnuEM&disp=emb&realattid=181fad139117c7cbdf41" alt="friends" width="547" height="730">
             </body>
 </html>
