--- a/index.html
+++ b/index.html
@@ -23,9 +23,9 @@
             <br>
             <br>
           <h3 style="text-align: center;">About Me</h3>
-          <p>&nbsp; &nbsp;&nbsp; &nbsp;&nbsp; &nbsp;I am Olivia Miles. I have grown up In San Francisco and I will be a sophomore at San Francisco University High School this upcoming year.
-            I am interested in learning how<br>
-            &nbsp; &nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp;to support nonprofits through website design while gaining new skills. I enjoy listening to music, taking pictures, collecting artwork, and walking around the city with friends. </h3>
+          <p style="text-align:center ;">I am Olivia Miles. I have grown up In San Francisco and I will be a sophomore at San Francisco University High School this upcoming year.
+            I am interested in learning how<br><br>
+            to support nonprofits through website design while gaining new skills. I enjoy listening to music, taking pictures, collecting artwork, and walking around the city with friends. </h3>
             <p style="text-align: center;"></p>
             <hr>
 
@@ -40,8 +40,8 @@
                  <br>
                  <br>
                  <!-<h2 style="text-align:center">Gallery</h2>-->
-                 <img src="https://mail.google.com/mail/u/1?ui=2&ik=21883c881f&attid=0.8&permmsgid=msg-f:1738260409297200271&th=181f8aa1ef48e48f&view=att&disp=safe&realattid=ffbf0c6653460535_0.8" alt="city image">
-                 <img src="https://mail.google.com/mail/u/1?ui=2&ik=21883c881f&attid=0.4&permmsgid=msg-f:1738260409297200271&th=181f8aa1ef48e48f&view=att&disp=safe&realattid=ffbf0c6653460535_0.4">
+                 <img src="https://mail.google.com/mail/u/1?ui=2&ik=21883c881f&attid=0.8&permmsgid=msg-f:1738260409297200271&th=181f8aa1ef48e48f&view=att&disp=safe&realattid=ffbf0c6653460535_0.8" alt="city image" height="730" width="548">
+                 <img src="https://mail.google.com/mail/u/1?ui=2&ik=21883c881f&attid=0.4&permmsgid=msg-f:1738260409297200271&th=181f8aa1ef48e48f&view=att&disp=safe&realattid=ffbf0c6653460535_0.4" height="734" width="551">
                  
             </body>
 
