--- a/index.html
+++ b/index.html
@@ -40,8 +40,8 @@
                  <br>
                  <br>
                  <!-<h2 style="text-align:center">Gallery</h2>-->
-                 <img src="https://lh3.googleusercontent.com/Cx_F65yGkhswxgOr…dJQ4C3vuNAybD2hV-CxUEeo=w1096-h1460-no?authuser=0" alt="city image" height="730" width="548">
-                 <img src="https://lh3.googleusercontent.com/hZtnB7Xiwd08CgU7…mzLFsFJiU6mPUL2dIHk3qUI=w1096-h1460-no?authuser=0" height="734" width="551">
+                 <img src="https://mail.google.com/mail/u/0?ui=2&ik=21883c881f&attid=0.8&permmsgid=msg-f:1738260409297200271&th=181f8aa1ef48e48f&view=att&disp=safe&realattid=ffbf0c6653460535_0.8" width="273.5" height="365">
+                 <img src="https://mail.google.com/mail/u/0?ui=2&ik=21883c881f&attid=0.4&permmsgid=msg-f:1738260409297200271&th=181f8aa1ef48e48f&view=att&disp=safe&realattid=ffbf0c6653460535_0.4" width="275.5" height="367">
                  
             </body>
 
