--- a/index.html
+++ b/index.html
@@ -27,9 +27,7 @@
             I am interested in learning how<br><br>
             to support nonprofits through website design while gaining new skills. I enjoy listening to music, taking pictures, collecting artwork, and walking around the city with friends. </h3>
             <p style="text-align: center;"></p>
-            <hr>
-
-            
+            <hr>            
             <!--<h3 style="text-align: center;">Experience and Skills</h3>
             <p >I have experience with building websites using Weebly and worked a little with Python. <br>
                 I am working towards improving my photography and drawing skills.<br>
@@ -37,16 +35,15 @@
                  ​Additional skills I have are adaptability, active-listening, time management, and creativity.</p>
 
                  <!-<h2 style="text-align:center">Gallery</h2>-->
-                 
                  <div class="row">
                   <div class="column">
-                    <img src="https://mail.google.com/mail/u/0?ui=2&ik=21883c881f&attid=0.8&permmsgid=msg-f:1738260409297200271&th=181f8aa1ef48e48f&view=att&disp=safe&realattid=ffbf0c6653460535_0.8" style="width:100%">
+                    <img src="file:///Users/oliviamiles/Downloads/IMG-9780%20(1).jpg" style="width:100%">
                   </div>
                   <div class="column">
-                    <img src="https://mail.google.com/mail/u/0?ui=2&ik=21883c881f&attid=0.4&permmsgid=msg-f:1738260409297200271&th=181f8aa1ef48e48f&view=att&disp=safe&realattid=ffbf0c6653460535_0.4" style="width:100%">
+                    <img src="file:///Users/oliviamiles/Downloads/IMG-4069.jpg" style="width:100%">
                   </div>
                   <div class="column">
-                    <img src="https://mail.google.com/mail/u/0?ui=2&ik=21883c881f&attid=0.3&permmsgid=msg-f:1738298390670987387&th=181fad2d2993d07b&view=fimg&fur=ip&sz=s0-l75-ft&attbid=ANGjdJ_VJNopnWiJYss4aFN0tMjL6S62C8Cmuq_5bYYyfAOUG13L8r6-3LblLRrN2c7a5ez7x9BP1CeG5Cjwq5zWhXowqO7MhV8NxafAqf34uU6qzLj7R6PpTiR-3Dk&disp=emb&realattid=181fad18950a993c3fb2" style="width:100%"> 
+                    <img src="file:///Users/oliviamiles/Downloads/IMG_8868%20(1).jpeg" style="width:100%"> 
                   </div>
                 </div>
                 <style>
