--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <title>Olivia Miles</title>
         <link href="style.css" type="text/css" rel="stylesheet">
         <link href="E1T1.html" type="text/html" rel="stylesheet">
-        <link href="Contact.html" type="text/html" rel="stylesheet">
+        <link href="contact.html" type="text/html" rel="stylesheet">
         
     </head>
 
