--- a/index.html
+++ b/index.html
@@ -37,13 +37,13 @@
                  <!-<h2 style="text-align:center">Gallery</h2>-->
                  <div class="row">
                   <div class="column">
-                    <img src="file:///Users/oliviamiles/Downloads/IMG-9780%20(1).jpg" style="width:100%">
+                    <img src="file:///Users/oliviamiles/Downloads/IMG-9780%20(1).jpg" style="width:100%"/>
                   </div>
                   <div class="column">
-                    <img src="file:///Users/oliviamiles/Downloads/IMG-4069.jpg" style="width:100%">
+                    <img src="file:///Users/oliviamiles/Downloads/IMG-4069.jpg" style="width:100%"/>
                   </div>
                   <div class="column">
-                    <img src="file:///Users/oliviamiles/Downloads/IMG_8868%20(1).jpeg" style="width:100%"> 
+                    <img src="file:///Users/oliviamiles/Downloads/IMG_8868%20(1).jpeg" style="width:100%"/> 
                   </div>
                 </div>
                 <style>
